# data-assimilation-with-generative-ML

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
main_scripts/: solve_inverse.py  solve_inverse_HMC.py  solve_inverse_SVGD.py  solve_inverse_langevin.py  train_SMLD.py  train_forward_model.py  train_initial_condition_model.py
src/data_assimilation_with_generative_ML/: __init__.py  darts-runnnable.py  datasets.py  diffusion_models.py  forward_models.py  initial_condition_models.py  neural_network_models.py  plotting_utils.py  transformer_layers.py  variational_inference.py
src/data_assimilation_with_generative_ML/bayesian_inference/: hamiltonian_monte_carlo.py  langevin_dynamics.py  stein_variational_gradient_descent.py  utils.py  variational_inference.py
src/data_assimilation_with_generative_ML/darts_geomech_runnable/: dartsExample.py  inspect-result.py  runnable_darts_geomech.py
src/data_assimilation_with_generative_ML/darts_geomech_runnable/output/: solution.h5  well_data.h5
src/data_assimilation_with_generative_ML/runs/ccus_64x64x1/: DARTS_simulation_realization_0_observations.pkl  DARTS_simulation_realization_1_observations.pkl
